--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "next": "12.1.5",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-select": "^5.3.2",
+    "react-tag-input-component": "^1.0.7"
   },
   "devDependencies": {
     "eslint": "8.14.0",
