--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-select": "^5.3.2",
-    "react-tagsinput": "^3.19.0"
+    "react-tagsinput": "^3.19.0",
+    "sass": "^1.54.0"
   },
   "devDependencies": {
     "eslint": "8.14.0",
