--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/material": "^5.9.3",
+    "@mui/x-data-grid": "^5.15.1",
+    "moment": "^2.29.4",
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
