--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ddh_fe",
+  "name": "ddh_fe-ts",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -23,7 +23,10 @@
     "sass": "^1.55.0"
   },
   "devDependencies": {
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
     "eslint": "8.26.0",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "typescript": "^4.8.4"
   }
 }
