--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
-  "name": "ddh_fe-ts",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@mui/material": "^5.10.11",
-    "@mui/x-data-grid": "^5.17.8",
-    "final-form": "^4.20.7",
-    "moment": "^2.29.4",
-    "next": "12.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-final-form": "^6.5.9",
-    "react-select": "^5.5.6",
-    "sass": "^1.55.0"
-  },
-  "devDependencies": {
-    "@types/node": "^18.11.9",
-    "@types/react": "^18.0.25",
-    "eslint": "8.26.0",
-    "eslint-config-next": "12.3.1",
-    "typescript": "^4.8.4"
-  }
+    "name": "ddh_fe-ts",
+    "version": "1.0.1",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.10.5",
+        "@emotion/styled": "^11.10.5",
+        "@mui/material": "^5.11.7",
+        "@mui/x-data-grid": "^5.17.22",
+        "final-form": "^4.20.9",
+        "moment": "^2.29.4",
+        "next": "13.1.6",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-final-form": "^6.5.9",
+        "react-select": "^5.7.0",
+        "sass": "^1.58.0"
+    },
+    "devDependencies": {
+        "@types/node": "^18.11.18",
+        "@types/react": "^18.0.27",
+        "eslint": "8.33.0",
+        "eslint-config-next": "13.1.6",
+        "typescript": "4.9.5"
+    }
 }
